--- a/src/CSS/responsivo.css
+++ b/src/CSS/responsivo.css
@@ -3,7 +3,10 @@
     /* ---- HOMEPAGE ---- */
 
     div#home-area {
-        padding-bottom: 100%;
+        padding-bottom: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     div#home-area h1.nome {
