--- a/src/CSS/responsivo.css
+++ b/src/CSS/responsivo.css
@@ -33,6 +33,10 @@
 
     /* ---- HOMEPAGE ---- */
 
+    div#home-area {
+        padding: 150px 0 150px;
+    }
+
     div#home-area .img-fluid {
         display: none;
     }
