--- a/src/CSS/reset.css
+++ b/src/CSS/reset.css
@@ -7,10 +7,14 @@
 body {
     font-family: 'Saira Condensed', sans-serif;
     font-weight: bold;
-    background-color: #061323;
+    
 }
 
 p, li {
     color: #747373;
     list-style: none;
+}
+
+ul {
+    padding-left: 0;
 }
