--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,8 +1,5 @@
 /*-------- HEADER/CABEÇALHO --------*/
 
-header {
-    margin-bottom: 15vh;
-}
 
 header nav.navbar {
     background-color: #1C3C5E;
@@ -72,7 +69,9 @@ div#navbar-links a:hover {
 /*-------- CONTEÚDO HOMEPAGE --------*/
 
 div#home-area {
-    padding: 150px 0 200px;
+    padding: 230px 0 200px;
+    background: linear-gradient(to bottom, #061323, #0a1b38, #0d2250, #0e254a);
+    
 }
 
 div#home-area h1.nome {
@@ -160,6 +159,7 @@ div p.descricao { /* Minha descrição */
 
 div#skills-area {
     padding: 150px 0 100px;
+    background: linear-gradient(to bottom, #061323, #0a1b38, #0d2250, #0e254a);
 }
 
 div#skills-area h3.skills-title {
@@ -217,7 +217,7 @@ h3.experiencia-title  {
 }
 
 div#experiencia-area .card {
-    background-color: #061323;
+    background: linear-gradient(to bottom, #061323, #0a1b38, #0d2250, #0e254a);
     padding: 30px;
     border-radius:30px;
 }
@@ -244,6 +244,7 @@ i.fas.fa-check {
 
 div#projetos-area {
     padding: 150px 0 100px;
+    background: linear-gradient(to bottom, #061323, #0a1b38, #0d2250, #0e254a);
     
 }
 
@@ -306,17 +307,25 @@ div#contato-area div.form-group input, div#contato-area div.form-group #mensagem
 
 /*----- FOOTER -----*/
 
+footer {
+    background-color: #061323;
+    padding-bottom: 1px;
+    padding-top: 40px;
+}
+
 footer ul {
     display: flex;
     gap: 20px;
     justify-content: center;
-    padding-top: 50px;
     margin-bottom: 30px;
+    
 }
 
 footer ul img {
     width: 30px;
+    margin-top: 0px;
     transition: .3s all ease-in-out;
+    text-align: center;
 
 }
 
