--- a/src/CSS/reset.css
+++ b/src/CSS/reset.css
@@ -2,11 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
     font-family: 'Saira Condensed', sans-serif;
     font-weight: bold;
+    overflow-x: hidden;
     
 }
 
