--- a/src/CSS/reset.css
+++ b/src/CSS/reset.css
@@ -9,6 +9,7 @@ body, html {
     font-family: 'Saira Condensed', sans-serif;
     font-weight: bold;
     overflow-x: hidden;
+    background-color: #110B23;
     
 }
 
