--- a/src/CSS/responsivo.css
+++ b/src/CSS/responsivo.css
@@ -42,7 +42,9 @@
     /* ---- HOMEPAGE ---- */
 
     div#home-area {
-        padding-bottom: 35vh;
+        display: flex;
+        min-height: 100vh;
+        align-items: center;
     }
 
     div#home-area .img-fluid {
