--- a/src/CSS/rolagem.css
+++ b/src/CSS/rolagem.css
@@ -1,7 +1,4 @@
-* {
-    scrollbar-width: thin;
-    scrollbar-color: #34a0d6 black;
-}
+
 
 *::-webkit-scrollbar {
     width: 12px;
@@ -12,7 +9,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #34a0d6;
+    background-color: #F91E4E;
     border-radius: 20px;
     border: 3px solid #262626;
 }
