--- a/src/CSS/rolagem.css
+++ b/src/CSS/rolagem.css
@@ -9,7 +9,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #F91E4E;
+    background-color: var(--cor-primaria);
     border-radius: 20px;
     border: 3px solid #262626;
 }
