--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -280,6 +280,7 @@ div#projetos-area {
 div#projetos-area h3.projetos-title {
     text-align: center;
     color: white;
+    margin-bottom: -50px;
 }
 
 div#projetos-area div.card {
